fixes alignment of logo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,9 @@
  border-color: #fc8c4b;
 }
 
-
+.logo-text{
+  margin-top:-14px;
+}
 
 
 
